# distantrace-scraper

./: .gitignore  README.md  function_app.py  hello.py  load-active-events.py  load-history.ipynb  load_active_events.py  pyproject.toml  requirements.txt  results.parquet  upsert-history.ipynb
.github/workflows/: main_distantrace-scraper.yml
